[build-system]
requires = ["setuptools>=40.6.0", "wheel", "numpy", "pybind11"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]

[tools.setuptools_scm]
write_to = starry/starry_version.py
write_to_template = '__version__ = "{version}"\n'
