[build-system]
requires = ["setuptools>=42", "wheel", "numpy", "pybind11", "setuptools_scm[toml]>=3.3"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tools.setuptools_scm]
write_to = "starry/starry_version.py"
write_to_template = '__version__ = "{version}"\n'
